# soomfon-plugin

./: .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  STATUS.md  docker-compose.yml  docker-entrypoint.sh  electron-builder.json  loop.sh  package-lock.json  package.json  ralph-log-20260115-082423.txt  ralph-log-20260115-082642.txt  ralph-log-20260115-083024.txt  ralph-log-20260115-083810.txt  ralph-log-20260115-084152.txt  ralph-log-20260115-090237.txt  ralph-log-20260115-092501.txt  tailwind.config.js  tsconfig.base.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/commands/: go.md
.claude/scripts/: ralph-loop-v2.sh  ralph-loop.sh  ralph-test.sh  sample-prompt.md
.serena/: project.yml
.serena/memories/: hid_manager_code.md  project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
assets/tray/: README.md
docs/: soomfon-protocol.md  usb-protocol-reverse-engineering.md
plans/: 00-project-overview.md  01-device-discovery.md  02-protocol-implementation.md  03-action-system.md  04-configuration-system.md  05-electron-gui.md  06-integrations.md  07-polish-distribution.md  RALPH-LOOP-GUIDE.md
plans/02-protocol-implementation/: 01-hid-manager.md  02-event-parser.md  03-protocol-commands.md  04-image-transmission.md  05-integration-test.md  _manifest.md  manifest-status.md
plans/03-action-system/: 01-type-definitions.md  02-action-engine.md  03-keyboard-handler.md  04-launch-handler.md  05-script-handler.md  06-http-handler.md  07-media-handler.md  08-system-handler.md  09-event-binder.md  _manifest.md  manifest-status.md
plans/04-configuration-system/: 01-configuration-schema.md  02-zod-validation.md  03-config-manager.md  04-profile-manager.md  05-import-export.md  06-migrations.md  _manifest.md  manifest-status.md
plans/05-electron-gui/: 01-electron-vite-react-setup.md  02-ipc-communication-layer.md  03-main-window-layout.md  04-device-view-component.md  05-action-editor-panel.md  06-encoder-editor-panel.md  07-profile-manager.md  08-settings-panel.md  09-system-tray.md  10-auto-launch-startup.md  _manifest.md  manifest-status.md
plans/06-integrations/: _manifest.md  (+8 more)
scripts/: capture-input.ts  detect-device.ts  hid-blocking-test.js  hid-report-test.js  hid-test.js  keyboard-test.js  rawkey-test.ps1  usb-test.js
src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/actions/: engine.rs  event_binder.rs  mod.rs  types.rs
src-tauri/src/actions/handlers/: home_assistant.rs  http.rs  keyboard.rs  launch.rs  media.rs  mod.rs  node_red.rs  profile.rs  script.rs  system.rs  text.rs  workspace.rs
src-tauri/src/commands/: actions.rs  config.rs  device.rs  mod.rs  system.rs
src-tauri/src/config/: manager.rs  mod.rs  profiles.rs  types.rs
src-tauri/src/hid/: manager.rs  mod.rs  packets.rs  protocol.rs  types.rs
src-tauri/src/image/: mod.rs  processor.rs
src-tauri/src/system/: auto_launch.rs  mod.rs
src-tauri/src/tray/: mod.rs
(+132 files in other folders)
