[package]
name = "soomfon-controller"
version = "0.1.0"
description = "Stream Deck-style controller for SOOMFON HID device"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "soomfon_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
hidapi = "2.6"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
directories = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
parking_lot = "0.12"
base64 = "0.22"
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Registry"
]}

[profile.dev]
incremental = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
