[package]
name = "soomfon-controller"
version = "0.1.0"
description = "Stream Deck-style controller for SOOMFON HID device"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"
default-run = "soomfon-controller"

[lib]
name = "soomfon_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Main Tauri application binary
[[bin]]
name = "soomfon-controller"
path = "src/main.rs"

# Test binaries
[[bin]]
name = "button_test"
path = "src/bin/button_test.rs"

[[bin]]
name = "bulk_test"
path = "src/bin/bulk_test.rs"

[[bin]]
name = "hid_protocol_test"
path = "src/bin/hid_protocol_test.rs"

[[bin]]
name = "poll_test"
path = "src/bin/poll_test.rs"

[[bin]]
name = "endpoint_test"
path = "src/bin/endpoint_test.rs"

[[bin]]
name = "init_test"
path = "src/bin/init_test.rs"

[[bin]]
name = "shutdown_test"
path = "src/bin/shutdown_test.rs"

[[bin]]
name = "hidapi_test"
path = "src/bin/hidapi_test.rs"

[[bin]]
name = "async_hid_test"
path = "src/bin/async_hid_test.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
hidapi = "2.6"
rusb = "0.9"
async-hid = "0.4"
futures-lite = "2"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
directories = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
parking_lot = "0.12"
base64 = "0.22"
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Registry"
] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
